--- a/intro.css
+++ b/intro.css
@@ -31,7 +31,7 @@ body{
     width: 100%;
     height: 100%;
     overflow: hidden;
-    animation: slider1 3s forwards;
+    /* animation: slider1 3s forwards; */
     user-select: none;
 }
 @keyframes slider1{
@@ -292,7 +292,7 @@ body{
     opacity: 0;
     transform: scale(0.3);
 }
-.slider1 .slider-img1{
+.slider1 .box-slider_img1 .slider-img1{
     position: absolute;
     width: 400px;
     top: 50%;
@@ -322,7 +322,7 @@ body{
         transform: translate(-50%, -50%) rotate(360deg);
     }
 }
-.slider1 .slider-img1::before{
+.slider1 .box-slider_img1 .slider-img1::before{
     position: absolute;
     content: '';
     width: calc(100% - 40px);
@@ -332,7 +332,7 @@ body{
     z-index: -1;
     box-shadow: inset 0px 0px 80px rgb(0, 0, 0);
 }
-.slider1 .slider-img1 img{
+.slider1 .box-slider_img1 .slider-img1 img{
     width: 100%;
 }
 .box-number{
@@ -358,7 +358,7 @@ body{
 }
 .number2023 .number:nth-child(1){
     position: relative;
-    top: -400px;
+    top: -500px;
     animation: number1 1.5s 4.5s linear forwards;
 }
 @keyframes number1{
@@ -485,17 +485,17 @@ body{
 }
 .number2023 .number:nth-child(2){
     position: relative;
-    top: -400px;
+    top: -500px;
     animation: number1 1.5s 5.5s linear forwards;
 }
 .number2023 .number:nth-child(3){
     position: relative;
-    top: -400px;
+    top: -500px;
     animation: number1 1.5s 6.5s linear forwards;
 }
 .number2023 .number:nth-child(4){
     position: relative;
-    top: -400px;
+    top: -500px;
     animation: number1 1.5s 7.5s linear forwards;
 }
 .box-button{
@@ -797,7 +797,7 @@ body{
 }
 .box-slider-img3{
     position: absolute;
-    top: -120px;
+    top: -200px;
     left: 230px;
     width: 130px;
     height: auto;
@@ -807,7 +807,7 @@ body{
 }
 @keyframes dichchuyen2{
     0%{
-        top: -120px;
+        top: -200px;
         left: 230px;
     }
     30%{
@@ -860,7 +860,7 @@ body{
 }
 .box-slider-img4{
     position: absolute;
-    top: -120px;
+    top: -200px;
     right: 230px;
     width: 130px;
     height: auto;
@@ -870,7 +870,7 @@ body{
 }
 @keyframes dichchuyen3{
     0%{
-        top: -120px;
+        top: -200px;
         right: 230px;
     }
     30%{
@@ -923,7 +923,7 @@ body{
 }
 .box-slider-img5{
     position: absolute;
-    top: -150px;
+    top: -200px;
     right: 30px;
     width: 160px;
     height: auto;
@@ -933,7 +933,7 @@ body{
 }
 @keyframes dichchuyen4{
     0%{
-        top: -150px;
+        top: -200px;
         right: 30px;
     }
     30%{
@@ -1850,8 +1850,10 @@ body{
 .box-number.active{
    animation: activeScale 1s forwards;
 }
-.button.active{
+.box-button.active{
    animation: activeScale 1s forwards;
+   opacity: 0;
+
 }
 
 /* ----active slider 2----- */
@@ -1895,5 +1897,234 @@ body{
     }
     30%,100%{
         transform: scale(1);
+    }
+ }
+
+
+
+/* ----------Responsive----- */
+ @media screen and (max-width:768px) {
+    .box-slider{
+        overflow: hidden;
+    }
+    .slider1 img{
+        width: 100%;
+        height: 100%;
+    }
+    .box-slider-img2 .slider-img2{
+        top: 100px;
+        left: 10px;
+        width: 100px;
+    }
+    .box-slider-img2 .slider-img2::before{
+        width: 60px;
+        height: 60px;
+    }
+    .box-slider-img3 .slider-img3{
+        width: 100px;
+        top: 80px;
+        left: 0px;
+        display: none;
+    }
+    .box-slider-img3 .slider-img3::before{
+        width: 70px;
+        height: 70px;
+    }
+    .box-slider-img4 .slider-img4{
+        width: 100px;
+        top: 80px;
+        right: 30px;
+        display: none;
+    }
+    .box-slider-img4 .slider-img4::before{
+        width: 60px;
+        height: 60px;
+    }
+    .box-slider-img5 .slider-img5{
+        width: 100px;
+        right: 10px;
+    }
+    .box-slider-img5 .slider-img5::before{
+        width: 60px;
+        height: 60px;
+    }
+    .textHappynewyear{
+        width: 280px;
+    }
+    .textHappynewyear .box-span span{
+        width: 50px;
+        height: 50px;
+    }
+    .textHappynewyear .box-span:nth-child(1) span::after{
+        font-size: 23px;
+    }
+    .textHappynewyear .box-span:nth-child(2) span::after{
+        font-size: 23px;
+    }
+    .textHappynewyear .box-span:nth-child(3) span::after{
+        font-size: 23px;
+    }
+    .textHappynewyear .box-span:nth-child(4) span::after{
+        font-size: 23px;
+    }
+    .slider1 .box-slider_img1 .slider-img1{
+        width: 280px;
+        z-index: 100000;
+    }
+    .slider1 .slider-img1 img{
+        width: 100%;
+    }
+    .slider1 .box-slider_img1 .slider-img1::before{
+        width: calc(100% -50px);
+    }
+    .circle span{
+        width: 300px;
+        height: 300px;
+    }
+    .cat img{
+        width: 130px;
+        margin-top: -30px;
+    }
+    .box-lion_dance .lion_dance1{
+        width: 170px;
+        top: 400px;
+        right: 20px;
+        z-index: 100000;
+    }
+    .box-lion_dance .lion_dance1::before{
+        width: 100px;
+        bottom: 40px;
+    }
+    .box-lion_dance .lion_dance2{
+        width: 180px;
+        top: 415px;
+        left: 20px;
+        z-index: 100000;
+    }
+    .box-lion_dance .lion_dance2::before{
+        width: 80px;
+        bottom: 25px;
+    }
+    .box-flower{
+        display: none;
+    }
+    .number2023{
+        top: 60%;
+        font-size: 65px;
+    }
+    .box-button{
+        top: 80%;
+    }
+    .slider2 .rhombus:nth-child(1){
+        width: 306px;
+        height: 280px;
+    }
+    .slider2 .rhombus:nth-child(2){
+        width: 230px;
+        height: 204px;
+    }
+    .rhombus-img{
+        width: 170px;
+        height: 170px;
+    }
+    .mail{
+        margin-top: 370px;
+        z-index: 1000000000000000;
+    }
+    .slider3 .box-content{
+        width: 100%;
+    }
+.box-circle_left .circle_left{
+    width: 200px;
+}
+.box-circle_left .circle_left::before{
+    width: 180px;
+    height: 180px;
+}
+.text-content h2{
+    font-size: 15px;
+}
+.text-content h1{
+    font-size: 19px;
+}
+.text-content span{
+    font-size: 25px;
+}
+.box-big_flowers img:nth-child(1){
+    width: 30px;
+    top: 30px;
+    right: 30px;
+}
+.box-big_flowers img:nth-child(2){
+    width: 30px;
+    left: 0px;
+}
+.box-big_flowers img:nth-child(3){
+    width: 40px;
+    left: 70px;
+}
+.box-big_flowers img:nth-child(4){
+    width: 70px;
+}
+.box-big_flowers img:nth-child(6){
+    width: 70px;
+    left: 20px;
+}
+.box-big_flowers img:nth-child(7){
+    width: 30px;
+    right: 60px;
+}
+.apricot_blossom img:nth-child(1){
+    width: 20px;
+    left: 100px;
+}
+.slider3 .right .content .title{
+    height: 25px;
+}
+.slider3 .right .content h1{
+    font-size: 20px;
+}
+.box-content .right .content p{
+    font-size: 15px;
+}
+.box-content .right .content .fixedContent{
+    width: 200px;
+    margin-left: 50px;
+}
+.box-content .right .content .fixedContent h3{
+   font-size: 15px;
+}
+ }
+
+
+ @media screen and (max-width: 390px){
+    .box-lion_dance .lion_dance1{
+        top: 550px;
+        z-index: 100000;
+        right: 0;
+    }
+    .box-lion_dance .lion_dance2{
+        top: 565px;
+        z-index: 100000;
+        left: 0;
+    }
+    .box-button{
+        top: 90%;
+    }
+    .number2023{
+        font-size: 50px;
+        top: 58%;
+    }
+    .number2023 .number:nth-child(1){
+        top: -600px;
+    }
+    .number2023 .number:nth-child(2){
+        top: -600px;
+    }
+    .number2023 .number:nth-child(3){
+        top: -600px;
+    }
+    .number2023 .number:nth-child(4){
+        top: -600px;
     }
  }
