--- a/intro.css
+++ b/intro.css
@@ -1975,7 +1975,7 @@ body{
         width: 100%;
     }
     .slider1 .box-slider_img1 .slider-img1::before{
-        width: calc(100% -50px);
+        width: calc(100% - 50px);
     }
     .circle span{
         width: 300px;
@@ -2127,4 +2127,4 @@ body{
     .number2023 .number:nth-child(4){
         top: -600px;
     }
- }
+}
